// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
.css-8pl84a,
[data-css-8pl84a] {
  -webkit-transition-delay: 0.2s;
  -webkit-transform: rotate(-180deg);
  -webkit-transition: all 0.3s cubic-bezier(0.285, -0.450, 0.935, 0.110);
  width: 25px;
  height: 25px;
  cursor: pointer;
  z-index: 1;
  transform: rotate(-180deg);
  transition: all 0.3s cubic-bezier(0.285, -0.450, 0.935, 0.110);
  transition-delay: 0.2s;
  position: absolute;
  top: 24px;
  right: 20px;
}

.css-8pl84a::before,
[data-css-8pl84a]::before {
  width: 5px;
  height: 25px;
  left: 10px;
  top: 0px;
  position: absolute;
  content: "";
  background-color: #0C98EB;
  border-radius: 2px;
}

.css-8pl84a::after,
[data-css-8pl84a]::after {
  width: 25px;
  height: 5px;
  left: 0px;
  top: 10px;
  position: absolute;
  content: "";
  background-color: #0C98EB;
  border-radius: 2px;
}

<StyledClosingSpan>
  <span
    className="css-8pl84a"
  />
</StyledClosingSpan>
`;

exports[`enzyme.mount 2`] = `
.css-1wvo26v,
[data-css-1wvo26v] {
  -webkit-transition-delay: 0.5s;
  -webkit-transform: rotate(45deg);
  -webkit-transition: all 0.6s cubic-bezier(0.000, 0.105, 0.035, 1.570);
  width: 25px;
  height: 25px;
  cursor: pointer;
  z-index: 1;
  transform: rotate(45deg);
  transition: all 0.6s cubic-bezier(0.000, 0.105, 0.035, 1.570);
  transition-delay: 0.5s;
  position: absolute;
  top: 24px;
  right: -50px;
}

.css-1wvo26v::before,
[data-css-1wvo26v]::before {
  width: 5px;
  height: 25px;
  left: 10px;
  top: 0px;
  position: absolute;
  content: "";
  background-color: #0C98EB;
  border-radius: 2px;
}

.css-1wvo26v::after,
[data-css-1wvo26v]::after {
  width: 25px;
  height: 5px;
  left: 0px;
  top: 10px;
  position: absolute;
  content: "";
  background-color: #0C98EB;
  border-radius: 2px;
}

<StyledClosingSpan
  open={true}
>
  <span
    className="css-1wvo26v"
  />
</StyledClosingSpan>
`;

exports[`enzyme.render 1`] = `
.css-8pl84a,
[data-css-8pl84a] {
  -webkit-transition-delay: 0.2s;
  -webkit-transform: rotate(-180deg);
  -webkit-transition: all 0.3s cubic-bezier(0.285, -0.450, 0.935, 0.110);
  width: 25px;
  height: 25px;
  cursor: pointer;
  z-index: 1;
  transform: rotate(-180deg);
  transition: all 0.3s cubic-bezier(0.285, -0.450, 0.935, 0.110);
  transition-delay: 0.2s;
  position: absolute;
  top: 24px;
  right: 20px;
}

.css-8pl84a::before,
[data-css-8pl84a]::before {
  width: 5px;
  height: 25px;
  left: 10px;
  top: 0px;
  position: absolute;
  content: "";
  background-color: #0C98EB;
  border-radius: 2px;
}

.css-8pl84a::after,
[data-css-8pl84a]::after {
  width: 25px;
  height: 5px;
  left: 0px;
  top: 10px;
  position: absolute;
  content: "";
  background-color: #0C98EB;
  border-radius: 2px;
}

<span
  class="css-8pl84a"
/>
`;

exports[`enzyme.render 2`] = `
.css-1wvo26v,
[data-css-1wvo26v] {
  -webkit-transition-delay: 0.5s;
  -webkit-transform: rotate(45deg);
  -webkit-transition: all 0.6s cubic-bezier(0.000, 0.105, 0.035, 1.570);
  width: 25px;
  height: 25px;
  cursor: pointer;
  z-index: 1;
  transform: rotate(45deg);
  transition: all 0.6s cubic-bezier(0.000, 0.105, 0.035, 1.570);
  transition-delay: 0.5s;
  position: absolute;
  top: 24px;
  right: -50px;
}

.css-1wvo26v::before,
[data-css-1wvo26v]::before {
  width: 5px;
  height: 25px;
  left: 10px;
  top: 0px;
  position: absolute;
  content: "";
  background-color: #0C98EB;
  border-radius: 2px;
}

.css-1wvo26v::after,
[data-css-1wvo26v]::after {
  width: 25px;
  height: 5px;
  left: 0px;
  top: 10px;
  position: absolute;
  content: "";
  background-color: #0C98EB;
  border-radius: 2px;
}

<span
  class="css-1wvo26v"
/>
`;

exports[`enzyme.shallow 1`] = `
.css-8pl84a,
[data-css-8pl84a] {
  -webkit-transition-delay: 0.2s;
  -webkit-transform: rotate(-180deg);
  -webkit-transition: all 0.3s cubic-bezier(0.285, -0.450, 0.935, 0.110);
  width: 25px;
  height: 25px;
  cursor: pointer;
  z-index: 1;
  transform: rotate(-180deg);
  transition: all 0.3s cubic-bezier(0.285, -0.450, 0.935, 0.110);
  transition-delay: 0.2s;
  position: absolute;
  top: 24px;
  right: 20px;
}

.css-8pl84a::before,
[data-css-8pl84a]::before {
  width: 5px;
  height: 25px;
  left: 10px;
  top: 0px;
  position: absolute;
  content: "";
  background-color: #0C98EB;
  border-radius: 2px;
}

.css-8pl84a::after,
[data-css-8pl84a]::after {
  width: 25px;
  height: 5px;
  left: 0px;
  top: 10px;
  position: absolute;
  content: "";
  background-color: #0C98EB;
  border-radius: 2px;
}

<span
  className="css-8pl84a"
/>
`;

exports[`enzyme.shallow 2`] = `
.css-1wvo26v,
[data-css-1wvo26v] {
  -webkit-transition-delay: 0.5s;
  -webkit-transform: rotate(45deg);
  -webkit-transition: all 0.6s cubic-bezier(0.000, 0.105, 0.035, 1.570);
  width: 25px;
  height: 25px;
  cursor: pointer;
  z-index: 1;
  transform: rotate(45deg);
  transition: all 0.6s cubic-bezier(0.000, 0.105, 0.035, 1.570);
  transition-delay: 0.5s;
  position: absolute;
  top: 24px;
  right: -50px;
}

.css-1wvo26v::before,
[data-css-1wvo26v]::before {
  width: 5px;
  height: 25px;
  left: 10px;
  top: 0px;
  position: absolute;
  content: "";
  background-color: #0C98EB;
  border-radius: 2px;
}

.css-1wvo26v::after,
[data-css-1wvo26v]::after {
  width: 25px;
  height: 5px;
  left: 0px;
  top: 10px;
  position: absolute;
  content: "";
  background-color: #0C98EB;
  border-radius: 2px;
}

<span
  className="css-1wvo26v"
/>
`;
